# test-pipeline

./: pyproject.toml  workable_pipeline.py
.dlt/: config.toml
workable/: workable_client.py
