[tool.poetry]
name = "test-pipeline"
version = "0.1.0"
description = ""
authors = ["Alena Astrakhantseva <astra92293@gmail.com>"]
readme = "README.md"
packages = [{include = "test_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"
dlt = {extras = ["bigquery"], version = "^0.2.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
